# FW0002-Basic-Stepper-Control-and-Diag

./: .gitignore  CMakeLists.txt  CODEX_RULES.txt  PINMAP_NOTES.md  README.md  cleanup_plan.md  sdkconfig  sdkconfig.defaults
docs/: bench_test_protocol.md  firmware_contract.md
main/: CMakeLists.txt  app_main.c  beam.c  board.c  diag_console.c  events.c  ir.c  ir_emitter.c  ir_sensor.c  json_helpers.c  led.c  led_strip.c  loadcell_adc.c  loadcell_scale.c  motor.c  neopixel.c  neopixel_strip.c  remote_actions.c  reset_reason.c  snapshot.c  stepper_driver_uart.c
main/include/: beam.h  board.h  diag_console.h  events.h  fw_version.h.in  ir.h  ir_emitter.h  ir_sensor.h  json_helpers.h  led.h  led_strip.h  loadcell_adc.h  loadcell_scale.h  motor.h  motor_driver_defaults.h  neopixel.h  neopixel_strip.h  remote_actions.h  reset_reason.h  snapshot.h  stepper_driver_uart.h
